# tree-sitter-imp

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-imp.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_imp/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterImp/: imp.h
bindings/swift/TreeSitterImpTests/: TreeSitterImpTests.swift
queries/: highlights.scm  locals.scm  tags.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
