[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-imp"
description = "Parser for the Imp language made for my matura project"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "imp"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Enea Giger" }]
requires-python = ">=3.10"
license.text = "GPLv3"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/enmiligi/tree-sitter-imp"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
